--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.8.1",
     "random-name": "^0.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
