--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "prop-types": "^15.8.1",
-    "random-name": "^0.1.2",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
+    "react-rating": "^2.0.5",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
