--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ Flask-Cors==4.0.0
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.3.2
 MarkupSafe==2.1.3
 numpy==1.26.0
 packaging==23.2
@@ -16,7 +17,10 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3.post1
+scikit-learn==1.4.0
+scipy==1.11.4
 six==1.16.0
 text-unidecode==1.3
+threadpoolctl==3.2.0
 tzdata==2023.3
 Werkzeug==2.3.7
